# websocket_rpc_server

./: CMakeLists.txt  README.md
include/: MyStubServer.h  websocket_server.h
src/: main.cpp  stubserver.cpp  websocket_server.cpp
